--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -4,7 +4,7 @@
 <div class = "row">
   
 
-  <div class = "span6">
+  <div class = "span6" >
 
   
     <div class = "picture">
@@ -78,14 +78,13 @@
 </div>
 </div>
     <div class = "row">
-  
-
-  <div class = "span6">
+<div class = "span6" id= "bottom_margin">
     <div class = "result">
-    <div class = "bike_details">
-      Bike Details
-    </div>
+   
       <div class = "spec_toggle">
+        <legend>
+      Bike Details
+    </legend>
       <a id= "basic_info">
         Basic Info 
         <i class="icon-chevron-right"> </i>
