--- a/app/views/bikes/_main_search_tool.html.erb
+++ b/app/views/bikes/_main_search_tool.html.erb
@@ -1,98 +1,84 @@
+<!--Indentation Complete-->
 <div class = "results_main_page">
-
- 
-<table class="table">
   <thead>
-
-      
-      <form>
-  <%=form_tag(search_bikes_path, :method => "put") do %>
-    <tr>
-    <legend>Search Bikes</legend>
-    <div class = "row">
-    	<div class= "span6">
-        <div  class="input-prepend">
-          <span class="add-on">Make: </span>
-          <%= select_tag "make", options_for_select(@makes), :prompt => "Any Make", :class=>"input-drop-down" %>
+    <form>
+      <%=form_tag(search_bikes_path, :method => "put") do %>
+        <legend>Search Bikes</legend>
+        <div class = "row">
+      	  <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">Make: </span>
+              <%= select_tag "make", options_for_select(@makes), :prompt => "Any Make", :class=>"input-drop-down" %>
+            </div>
+          </div>
+          <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">Model: </span>     
+              <%= select_tag "model", options_for_select(@models), :prompt => "Any Model", :class=>"input-drop-down" %>
+            </div>
+          </div>
         </div>
-      </div>
-        <div class= "span6">
-          <div  class="input-prepend">
-          <span class="add-on">Model: </span>     
-      <%= select_tag "model", options_for_select(@models), :prompt => "Any Model", :class=>"input-drop-down" %>
-      </div>
-    </div>
-   </div>
-    <div class = "row">
-      <div class= "span6">
-        <div  class="input-prepend">
-          <span class="add-on">Price: </span>     
-          <%= select_tag "price_from", options_for_select([
-            ["Min.", "0"],
-            ["Rs. 10,000", "9999"],
-            ["Rs. 25,000", "24999"],
-            ["Rs. 50,000", "49999"],
-            ["Rs. 75,000", "74999"],
-            ["Rs. 1,00,000", "99999"],
-            ["Rs. 1,50,000", "149999"],
-            ["Rs. 2,00,000", "199999"],
-            ["Rs. 3,00,000", "299999"],
-            ["Rs. 5,00,000", "499999"],
-            ["Rs. 10,00,000", "999999"]
-            ]), :prompt => "Price From", :class=>"input-drop-down" %>
-         </div>   
+        <div class = "row">
+          <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">Price: </span>     
+              <%= select_tag "price_from", options_for_select([
+                ["Min.", "0"],
+                ["Rs. 10,000", "9999"],
+                ["Rs. 25,000", "24999"],
+                ["Rs. 50,000", "49999"],
+                ["Rs. 75,000", "74999"],
+                ["Rs. 1,00,000", "99999"],
+                ["Rs. 1,50,000", "149999"],
+                ["Rs. 2,00,000", "199999"],
+                ["Rs. 3,00,000", "299999"],
+                ["Rs. 5,00,000", "499999"],
+                ["Rs. 10,00,000", "999999"]
+                ]), :prompt => "Price From", :class=>"input-drop-down" %>
+            </div>   
+          </div>
+          <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">Price: </span>     
+              <%= select_tag "price_to", options_for_select([
+                ["Rs. 10,000", "10001"],
+                ["Rs. 25,000", "25001"],
+                ["Rs. 50,000", "50001"],
+                ["Rs. 75,000", "75001"],
+                ["Rs. 1,00,000", "100001"],
+                ["Rs. 1,50,000", "150001"],
+                ["Rs. 2,00,000", "200001"],
+                ["Rs. 3,00,000", "300001"],
+                ["Rs. 5,00,000", "500001"],
+                ["Rs. 10,00,000", "1000001"],
+                ["Max.", "99999999999"]
+                ]), :prompt => "Price To", :class=>"input-drop-down" %>
+            </div>
+          </div>
         </div>
-      <div class= "span6">
-        
-        <div  class="input-prepend">
-          <span class="add-on">Price: </span>     
-
-      <%= select_tag "price_to", options_for_select([
-            ["Rs. 10,000", "10001"],
-            ["Rs. 25,000", "25001"],
-            ["Rs. 50,000", "50001"],
-            ["Rs. 75,000", "75001"],
-            ["Rs. 1,00,000", "100001"],
-            ["Rs. 1,50,000", "150001"],
-            ["Rs. 2,00,000", "200001"],
-            ["Rs. 3,00,000", "300001"],
-            ["Rs. 5,00,000", "500001"],
-            ["Rs. 10,00,000", "1000001"],
-            ["Max.", "99999999999"]
-            ]), :prompt => "Price To", :class=>"input-drop-down" %>
-         </div>
-       </div>
-     </div>
-     <div class = "row">
-      <div class= "span6">
-        <div  class="input-prepend">
-          <span class="add-on">City: </span>     
-			<%= select_tag :location, options_for_select(["Any Cities","Kathmandu", "Latitpur", "Bhaktapur"]),:class=>"input-drop-down" %>
-      </div>
-		</div>
-      <div class= "span6">
-
-        <div  class="input-prepend">
-          <span class="add-on">Type: </span>     
-			<%= select_tag :type, options_for_select(['Any Type',"Dealer New", "Dealer Used", "Private Seller"]),:class=>"input-drop-down" %>
+        <div class = "row">
+          <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">City: </span>     
+    			    <%= select_tag :location, options_for_select([
+                "Any Cities",
+                "Kathmandu", 
+                "Latitpur", 
+                "Bhaktapur"
+                ]),:class=>"input-drop-down" %>
+            </div>
+    		  </div>
+          <div class= "span6">
+            <div  class="input-prepend">
+              <span class="add-on">Type: </span>     
+        			<%= select_tag :type, options_for_select(['Any Type',"Dealer New", "Dealer Used", "Private Seller"]),:class=>"input-drop-down" %>
+            </div>
+      		</div>
         </div>
-
-		</div>
-    	
-    </div>
-    
-      
-  <input class="btn btn-primary" name="commit" type="submit" formaction="<%= search_bikes_path%>" value="Search" >
-    </tr>
-<% end %>
-
-  
-</form>
-      
-
+        <input class="btn btn-primary" name="commit" type="submit" formaction="<%= search_bikes_path%>" value ="Search" >
+      <% end %>
+    </form>
   </thead>
   <tbody>
-    
   </tbody>
-</table>
 </div><!--div results -->
